gcc/testsuite/g++.old-deja/g++.brendan/crash34.C
// { dg-do assemble  }
// GROUPS passed old-abort
operator int () {}// { dg-error "" } .*// ERROR - .*
